# eigh

./: .gitignore  CHANGELOG.md  CHANGES.md  CITATION.cff  CMakeLists.txt  MANIFEST.in  README.md  build.sh  example.py  example_simple.py  pyproject-cuda.toml  pyproject-cuda120.toml  pyproject-cuda128.toml  pyproject.toml  requirements.txt  run_gpu.sh  setup_gpu_env.sh  setup_gpu_env_clean.sh
.github/workflows/: publish-cuda.yml  publish.yml  tests.yml
benchmarks/: compare_performance_eigensolvers.py
benchmarks/suite/: README.md  bench_accuracy.py  bench_gradient.py  bench_scaling.py  common.py  plot.py  run_all.py
benchmarks/suite/results/: accuracy_cond.json  accuracy_degenerate.json  gradient_cond.json  gradient_degenerate.json  scaling.json
debug/: diag_jax.py  test_init.py
docs/: BUILD_FIXES.md  DEGENERACY.md  EXTRACTION_NOTES.md  QUICKSTART.md  TECHNICAL_NOTES.md  VERIFICATION.md
include/: ffi_helpers.h  kernel_nanobind_helpers.h
scripts/: install_build_deps.sh  test_cuda_dlopen.py
src/cpu/: lapack.cc  lapack_kernels.cc  lapack_kernels.h
src/cuda/: solver.cc  solver_kernels.cc  solver_kernels.h
src/jax/: __init__.py  generalized_eigensolver.py  generalized_eigensolver_pyscfad.py  generalized_eigensolver_stable.py
src/python/: eigh.py
src/python/eigh/: __init__.py  _core.py
tests/: test_eigh.py  test_eigh_compare.py  test_eigh_gen.py  test_eigh_hard.py  test_eigh_jit.py  test_eigh_performance.py  test_jax_eigensolvers.py
